src/select/example/select.styl
.selected-container .select-option,
.select-container .select-option {
  border-radius: 3px;
  padding: 5px;
  margin: 3px;
  cursor: pointer;
}

.select-container .select-option.selected {
  background: #18c9ba;
  color: #fff;
}

.select-container .select-option.active {
  background: #767676;
  color: #fff;
}

.select-container{
  border: 1px solid #eee;
  border-radius: 5px;
}

.select-container{
  max-height: 300px;
}

.select-container{
  overflow: auto;
  border: 1px solid #eee;
  border-radius: 5px;
  max-height: 300px;
}

